# stream-archiver

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  health.py  main.py  recorder.py  telegram_sender.py  twitch.py  types.py  uploader.py
app/kick/: __init__.py  types.py
app/twitch/: __init__.py  types.py
